@@ -1,5 +1,3 @@
-# Makefile for the top-level directory of GNU cockroach.
-# 
 # Copyright 2011-2015 Jose E. Marchesi
 # Copyright 2011-2015 Giuseppe Scrivano
 #
@@ -16,7 +14,23 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Subdirectories to descend into.
-SUBDIRS = doc lib po src tests testsuite
+SUBDIRS = cockroach.base
 
-ACLOCAL_AMFLAGS = -I m4
+AUTOMAKE_OPTIONS = dejagnu
+
+check-DEJAGNU: site.exp
+	srcdir=`cd $(srcdir) && pwd`; export srcdir; \
+	r=`pwd`; export r; \
+	LC_ALL=C; export LC_ALL; \
+	EXPECT=$(EXPECT); export EXPECT; \
+	runtest=$(RUNTEST); \
+	if $(SHELL) -c "$$runtest --version" > /dev/null 2>&1; then \
+	  CC_FOR_TARGET="$(CC_FOR_TARGET)" CFLAGS_FOR_TARGET="$(CFLAGS)" \
+		$$runtest --tool $(DEJATOOL) --srcdir $${srcdir} \
+			$(RUNTESTFLAGS); \
+	else echo "WARNING: could not find \`runtest'" 1>&2; :;\
+	fi
+
+
+
+
