@@ -1,5 +1,3 @@
-# Makefile for the top-level directory of GNU cockroach.
-# 
 # Copyright 2011-2015 Jose E. Marchesi
 # Copyright 2011-2015 Giuseppe Scrivano
 #
@@ -16,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Subdirectories to descend into.
-SUBDIRS = doc lib po src tests testsuite
+EXECUTABLES = test_a
 
-ACLOCAL_AMFLAGS = -I m4
+clean-local:
+	-rm -f $(EXECUTABLES)
