@@ -1,0 +1,8 @@
+#include <unistd.h>
+
+int
+main ()
+{
+  write (1, "foo\n", 4);
+  return 0;
+}
