@@ -1,3 +1,12 @@
+2015-04-06  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Output testsuite/Makefile and
+	testsuite/cockroach.base/Makefile.
+	* testsuite/lib/cockroach.exp: New file.
+	* testsuite/cockroach.base/version.exp: Likewise.
+	* testsuite/Makefile.am: Likewise.
+	* testsuite/cockroach.base/Makefile.am: Likewise.
+
 2015-04-06  Giuseppe Scrivano  <gscrivan@redhat.com>
 
 	* src/arch/syscall_names.h [ROACH_ARCH_X86_32]: Include
